--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -48,9 +48,10 @@ item.sapturretmod:turret_assembly_redstone.ttip=Used in the Turret Assembly Tabl
 item.sapturretmod:ammo.arrow.name=Arrow Bolt
 item.sapturretmod:ammo.shotgunshell.name=Shotgun Shell
 item.sapturretmod:ammo.harpoon.name=Harpoon
-item.sapturretmod:ammo.cryocell.1.name=Cryo Cell SG1
-item.sapturretmod:ammo.cryocell.2.name=Cryo Cell SG2
-item.sapturretmod:ammo.cryocell.3.name=Cryo Cell SG3
+item.sapturretmod:ammo.cryocell.name=Cryo Cell
+item.sapturretmod:ammo.cryocell.1.name=Type: SG1
+item.sapturretmod:ammo.cryocell.2.name=Type: SG2
+item.sapturretmod:ammo.cryocell.3.name=Type: SG3
 item.sapturretmod:ammo.bullet.name=Revolver Bullets
 item.sapturretmod:ammo.minigunshell.name=Minigun Rounds
 item.sapturretmod:ammo.eleccell.name=Electrolyte Cell
@@ -249,22 +250,15 @@ sanlib.lexicon.sapturretmod.stat.damage=Damage per projectile
 # Ammo
 sanlib.lexicon.sapturretmod.ammo.name=Ammunition Types
 sanlib.lexicon.sapturretmod.ammo.turret=Applicable Turret
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.arrow.name=Arrow Bolt
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.arrow.text=Used by the Crossbow Turret. Projectiles have a tiny knockback effect and act like standard arrows, just smaller. Very precise.\n\nCan be packaged, whose items will provide 16x ammo.
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.shell.shotgun.name=Shotgun Shell
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.shell.shotgun.text=Used by the Shotgun Turret. One shell turns into 6 dispersed pebble projectiles when shot, which have no knockback effect.\nDoes not cause any immunity to the target, thus targets hit by multiple pebbles will take damage from all of them.\n\nCan be packaged, whose items will provide 16x ammo.
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.cryocell.name=Cryo Cell
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.cryocell.text=Used by the Cryolator Turret. This ammunition comes in 3 versions, which applies different slowness effects:\nCell SG1: Slowness I for 15s\nCell SG2: Slowness III for 10s\nCell SG3: Slowness V for 5s.\n\nDoes not cause immunity and any damage to the target.\n\nCan be packaged, whose items will provide 16x ammo.
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.bullet.name=Revolver Bullets
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.bullet.text=Used by the Revolver Turret, it has the same knockback effect like the Shotgun projectiles, but do more damage than the Arrow bolts from the Crossbow Turret. Unlike other ammo types, this provides double the rounds.\n\nCan be packaged, whose items will provide 16x ammo.
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.shell.minigun.name=Minigun Rounds
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.shell.minigun.text=Used by the Minigun Turret. Cartridges contain seeds which do little damage and no knockback, but like the shotgun pebbles, they do not cause any immunity to the target. This, in combination with the rapid firing rate of the turret, compensate for their weakness.\nDue to the rapid firing rate, a cartridge provides 4 shots instead of the usual 1.\n\nCan be packaged, whose items will provide 16x ammo.
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.eleccell.name=Electrolyte Cell
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.eleccell.text=Used by the Forcefield Turret. Provides energy necessary to charge up the forcefield.\n\nCan be packaged, whose items will provide 16x ammo.
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.fluxcell.name=Flux Cell
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.fluxcell.text=Used by the Laser Turret. Lasers have no knockback effect and don't damage anything immune to fire (unless upgraded), but deal quite a decent amount of damage and also sets the target on fire for 5 seconds.\n\nCan be packaged, whose items will provide 16x ammo.
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.fueltank.name=Fuel Tank
-sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.fueltank.text=Used by the Flamethrower Turret. Flames have, like lasers, no knockback effect and are ineffective against fire-resistant targets (unless upgraded). They deal a hefty amount of damage and sets targets on fire for 5 seconds.\nLike the minigun cartridges, a tank provides 16 shots, due to the rapid firing rate of the turret.\n\nCan be packaged, whose items will provide 16x ammo.
+sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.arrow.text=These arrows have a smaller knockback effect and act like regular ones, just smaller. Very precise.
+sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.harpoon.text=Similar to Arrow Bolts with small knockback, but unlike those, the Harpoons can be used underwater.
+sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.shell.shotgun.text=One shell turns into 6 dispersed pebble projectiles when shot, which have no knockback effect.\nDoes not cause any immunity to the target, thus targets hit by multiple pebbles will take damage from all of them.
+sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.cryocell.text=This comes in 3 versions, which apply different slowness effects:\nCell SG1: Slowness I for 15s\nCell SG2: Slowness III for 10s\nCell SG3: Slowness V for 5s.\n\nDoes not cause immunity nor any damage to the target.
+sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.bullet.text=It has less of a knockback effect compared to Arrow Bolts, but do more damage than them. Unlike other ammo types, one item provides twice the rounds.
+sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.shell.minigun.text=The shells contain seeds which do little damage and no knockback, but like the shotgun pebbles, they do not cause any immunity to the target. This, in combination with the rapid firing rate of the turret, compensate for their weakness.\nDue to the rapid firing rate, an item provides 4 shots instead of the usual 1.
+sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.eleccell.text=Provides the energy necessary to charge up a big forcefield.
+sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.fluxcell.text=Lasers have no knockback effect and don't damage anything immune to fire (unless upgraded), but deal quite a decent amount of damage and also set the target on fire for 5 seconds.
+sanlib.lexicon.sapturretmod.ammo.sapturretmod:ammo.fueltank.text=Flames have, like lasers, no knockback effect and are ineffective against fire-resistant targets (unless upgraded). They deal a hefty amount of damage and sets targets on fire for 10 seconds.\nA tank item provides 16 shots, due to the rapid firing rate of the turret.
 # Info
 sanlib.lexicon.sapturretmod.info.name=About
 sanlib.lexicon.sapturretmod.info.version=Version
