* ammo can now have subtypes  * added tipped bolts for the Crossbow Turret  * finished turret pages  * Turret Cam now works properly for buoyant turrets  * began work on ammo pages  * Resource Orderer now works purely on programmatic sorting to make it more robust to additions of new items

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -46,6 +46,7 @@ item.sapturretmod:turret_assembly_redstone.name=Redstone Awareness Upgrade
 item.sapturretmod:turret_assembly_redstone.ttip=Used in the Turret Assembly Table
 # Ammo
 item.sapturretmod:ammo.arrow.name=Arrow Bolt
+item.sapturretmod:ammo.tipped_bolt.name=Tipped Arrow Bolt
 item.sapturretmod:ammo.shotgunshell.name=Shotgun Shell
 item.sapturretmod:ammo.harpoon.name=Harpoon
 item.sapturretmod:ammo.cryocell.name=Cryo Cell
