* finished ammo info template  * finished Crossbow Bolts and Bullets pages  * added Cryo-Cells, Harpoons and Shotgun Shells pages  * added recipe for Harpoons  * renamed ammo recipes to unify the naming scheme

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -49,7 +49,7 @@ item.sapturretmod:ammo.arrow.name=Arrow Bolt
 item.sapturretmod:ammo.tipped_bolt.name=Tipped Arrow Bolt
 item.sapturretmod:ammo.shotgunshell.name=Shotgun Shell
 item.sapturretmod:ammo.harpoon.name=Harpoon
-item.sapturretmod:ammo.cryocell.name=Cryo Cell
+item.sapturretmod:ammo.cryocell.name=Cryo-Cell
 item.sapturretmod:ammo.cryocell.1.name=Type: SG1
 item.sapturretmod:ammo.cryocell.2.name=Type: SG2
 item.sapturretmod:ammo.cryocell.3.name=Type: SG3
