* increased chance of not consuming ammo with the Economy I upgrade from 10% to 15%  * more work on upgrade pages

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -74,8 +74,8 @@ item.sapturretmod:upgrade.health.1.name=Health I Upgrade
 item.sapturretmod:upgrade.health.2.name=Health II Upgrade
 item.sapturretmod:upgrade.health.3.name=Health III Upgrade
 item.sapturretmod:upgrade.health.4.name=Health IV Upgrade
-item.sapturretmod:upgrade.reload.1.name=Reload I Upgrade
-item.sapturretmod:upgrade.reload.2.name=Reload II Upgrade
+item.sapturretmod:upgrade.reload.1.name=Reload Time I Upgrade
+item.sapturretmod:upgrade.reload.2.name=Reload Time II Upgrade
 item.sapturretmod:upgrade.upgstorage.1.name=Upgrade Storage I Upgrade
 item.sapturretmod:upgrade.upgstorage.2.name=Upgrade Storage II Upgrade
 item.sapturretmod:upgrade.upgstorage.3.name=Upgrade Storage III Upgrade
