* ProcessorTick event is now fired every tick instead of every 10 ticks for more accuracy (primarily fixes Forcefield Turret shielding reaction) and now has a processTicks field for handlers dependent on it (like to have a handler tick every 10 ticks like previously)  * projectiles killed by the Forcefield Turret now go up in smoke visually  * fix glowmap on turrets to actually glow now (again)  * Shield Projectile Deflector Upgrade and Shield Explosion Absorber Upgrade have been renamed to not include "Shield" in their names, otherwise their names would be too long for the lexicon  * Ammo Cartridge entry now has some more info  * Range infograph on buoyant turret entries (notable: Harpoon Turret) now has its lower and upper Y range switched, as it should be  * added Projectile Deflector Upgrade entry

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -87,8 +87,8 @@ item.sapturretmod:upgrade.ammousage.inf.name=Infinitas Oeconomia Upgrade
 item.sapturretmod:upgrade.endermedium.name=Ender Gain Medium Upgrade
 item.sapturretmod:upgrade.fuelpurifier.name=Fuel Purifier Upgrade
 item.sapturretmod:upgrade.shield.personal.name=Personal Shield Upgrade
-item.sapturretmod:upgrade.shield.projectile.name=Shield Projectile Deflector Upgrade
-item.sapturretmod:upgrade.shield.explosive.name=Shield Explosion Absorber Upgrade
+item.sapturretmod:upgrade.shield.projectile.name=Projectile Deflector Upgrade
+item.sapturretmod:upgrade.shield.explosive.name=Explosion Absorber Upgrade
 item.sapturretmod:upgrade.shield.strength.1.name=Shield Amplifier I Upgrade
 item.sapturretmod:upgrade.shield.strength.2.name=Shield Amplifier II Upgrade
 item.sapturretmod:upgrade.shield.colorizer.name=Shield Colorizer Upgrade
