* all references to HP changed to hearts  * allowed registration of custom layers for turret renderers  * added ability to bind a TCU to a specific turret, making it available for remote access by the TCU  * added landing text to the lexicon  * armor points bar trimmed to make health bar more visible in TCU info page  * TCU pages are now registered via ResourceLocation instead of just a string

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -27,6 +27,7 @@ item.sapturretmod:turret_laser.name=Laser Turret (T3)
 item.sapturretmod:turret_flamethrower.name=Flamethrower Turret (T3)
 # TCU
 item.sapturretmod:turret_control_unit.name=Turret Control Unit
+item.sapturretmod:turret_control_unit.bound=Bound to turret
 item.sapturretmod:turret_control_unit.name_1=Turret Croissant Urn
 item.sapturretmod:turret_control_unit.name_2=Turret Corrosion Unity
 item.sapturretmod:turret_control_unit.name_3=Trigger Capacity Uranus
@@ -140,31 +141,35 @@ gui.sapturretmod.tcu.label.shield_pers=Pers. Shield: %s
 gui.sapturretmod.tcu.label.shield_pers_recv=Pers. Shield: Recovering %s
 gui.sapturretmod.tcu.label.shield_turret=Shield: %s
 gui.sapturretmod.tcu.label.shield_turret_recv=Shield: Recovering %s
-gui.sapturretmod.tcu.page.info.title=Turret Info
-gui.sapturretmod.tcu.page.info.dismantle.error=You need a chest in your inventory to dismantle!
-gui.sapturretmod.tcu.page.info.name=Custom Turret Name
-gui.sapturretmod.tcu.page.info.health=Health (1 HP = 1/2 hearts)
-gui.sapturretmod.tcu.page.info.ammo=Ammo
-gui.sapturretmod.tcu.page.info.target=Current Target
-gui.sapturretmod.tcu.page.info.player=Owner
-gui.sapturretmod.tcu.page.info.forcefield=Forcefield
-gui.sapturretmod.tcu.page.targets.search.placeholder=Search for targets
-gui.sapturretmod.tcu.page.targets.creature.title=Entity Target Settings
-gui.sapturretmod.tcu.page.targets.player.title=Player Target Settings
-gui.sapturretmod.tcu.page.targets.smart.title=Smart Target Settings
-gui.sapturretmod.tcu.page.targets.smart.turret=Turret Awareness
-gui.sapturretmod.tcu.page.targets.smart.tamed=Tamed Awareness
-gui.sapturretmod.tcu.page.targets.smart.age=Age Awareness
-gui.sapturretmod.tcu.page.targets.smart.count=Count Awareness
-gui.sapturretmod.tcu.page.colorizer.title=Shield Color Settings
-gui.sapturretmod.tcu.page.colorizer.colorcode=Color Code
-gui.sapturretmod.tcu.page.colorizer.cullfaces=Cull Inner Faces
-gui.sapturretmod.tcu.page.upgrades.title=Upgrades
-gui.sapturretmod.tcu.page.leveling.title=Leveling
-gui.sapturretmod.tcu.page.leveling.xp=XP: %s
-gui.sapturretmod.tcu.page.leveling.retrieve=Retrieve excess XP
-gui.sapturretmod.tcu.page.leveling.modifier=Modifiers
-gui.sapturretmod.tcu.page.leveling.modValue=%s %%
+gui.sapturretmod.tcu.page.sapturretmod:info.title=Turret Info
+gui.sapturretmod.tcu.page.sapturretmod:info.dismantle.error=You need a chest in your inventory to dismantle!
+gui.sapturretmod.tcu.page.sapturretmod:info.name=Custom Turret Name
+gui.sapturretmod.tcu.page.sapturretmod:info.health=Health
+gui.sapturretmod.tcu.page.sapturretmod:info.health.suffix=%s hearts
+gui.sapturretmod.tcu.page.sapturretmod:info.armor.suffix=(+%s h.)
+gui.sapturretmod.tcu.page.sapturretmod:info.ammo=Ammo
+gui.sapturretmod.tcu.page.sapturretmod:info.ammo.suffix=%s rounds
+gui.sapturretmod.tcu.page.sapturretmod:info.target=Current Target
+gui.sapturretmod.tcu.page.sapturretmod:info.player=Owner
+gui.sapturretmod.tcu.page.sapturretmod:info.forcefield=Forcefield
+gui.sapturretmod.tcu.page.sapturretmod:info.forcefield.suffix=%s points
+gui.sapturretmod.tcu.page.sapturretmod:targets.search.placeholder=Search for targets
+gui.sapturretmod.tcu.page.sapturretmod:targets.creature.title=Entity Target Settings
+gui.sapturretmod.tcu.page.sapturretmod:targets.player.title=Player Target Settings
+gui.sapturretmod.tcu.page.sapturretmod:targets.smart.title=Smart Target Settings
+gui.sapturretmod.tcu.page.sapturretmod:targets.smart.turret=Turret Awareness
+gui.sapturretmod.tcu.page.sapturretmod:targets.smart.tamed=Tamed Awareness
+gui.sapturretmod.tcu.page.sapturretmod:targets.smart.age=Age Awareness
+gui.sapturretmod.tcu.page.sapturretmod:targets.smart.count=Count Awareness
+gui.sapturretmod.tcu.page.sapturretmod:colorizer.title=Shield Color Settings
+gui.sapturretmod.tcu.page.sapturretmod:colorizer.colorcode=Color Code
+gui.sapturretmod.tcu.page.sapturretmod:colorizer.cullfaces=Cull Inner Faces
+gui.sapturretmod.tcu.page.sapturretmod:upgrades.title=Upgrades
+gui.sapturretmod.tcu.page.sapturretmod:leveling.title=Leveling
+gui.sapturretmod.tcu.page.sapturretmod:leveling.xp=XP: %s
+gui.sapturretmod.tcu.page.sapturretmod:leveling.retrieve=Retrieve excess XP
+gui.sapturretmod.tcu.page.sapturretmod:leveling.modifier=Modifiers
+gui.sapturretmod.tcu.page.sapturretmod:leveling.modValue=%s %%
 gui.sapturretmod.tcu.button.info.dismantle=Dismantle Turret
 gui.sapturretmod.tcu.button.info.activate=Activate Turret
 gui.sapturretmod.tcu.button.info.deactivate=Deactivate Turret
@@ -239,6 +244,8 @@ itemGroup.sapturretmod:misc=Turret Mod: Items
 itemGroup.sapturretmod:upgrades=Turret Mod: Upgrades
 
 #### Lexicon ####
+sapturretmod.lexicon.landing=Defend against your foes!$(br2)This book shows you how to build turrets, other defensive systems and related items and blocks.
+
 sanlib.lexicon.sapturretmod.assembly=Turret Assembly Recipe
 sanlib.lexicon.sapturretmod.desc=Description
 sanlib.lexicon.sapturretmod.details=Details
