* turrets aren't highlighted anymore when pointed whilst holding a bound TCU  * expanded cartridge handling in the Remote Access TCU tab (ammo replacing and cartridge filling from output via shift-click from slot)  * added translations to Remote Access TCU tab  * added image showing turret highlighting whilst holding a bound TCU

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -170,6 +170,9 @@ gui.sapturretmod.tcu.page.sapturretmod:leveling.xp=XP: %s
 gui.sapturretmod.tcu.page.sapturretmod:leveling.retrieve=Retrieve excess XP
 gui.sapturretmod.tcu.page.sapturretmod:leveling.modifier=Modifiers
 gui.sapturretmod.tcu.page.sapturretmod:leveling.modValue=%s %%
+gui.sapturretmod.tcu.page.sapturretmod:remote_access.title=Remote Access
+gui.sapturretmod.tcu.page.sapturretmod:remote_access.ammo=Ammunition
+gui.sapturretmod.tcu.page.sapturretmod:remote_access.repair_kit=Repair Kits
 gui.sapturretmod.tcu.button.info.dismantle=Dismantle Turret
 gui.sapturretmod.tcu.button.info.activate=Activate Turret
 gui.sapturretmod.tcu.button.info.deactivate=Deactivate Turret
