* fixed crash caused by the non-existence of Patchouli  * changed dismantle error text to mention the Turret Crate instead of a chest  * updated changelog

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -143,7 +143,7 @@ gui.sapturretmod.tcu.label.shield_pers_recv=Pers. Shield: Recovering %s
 gui.sapturretmod.tcu.label.shield_turret=Shield: %s
 gui.sapturretmod.tcu.label.shield_turret_recv=Shield: Recovering %s
 gui.sapturretmod.tcu.page.sapturretmod:info.title=Turret Info
-gui.sapturretmod.tcu.page.sapturretmod:info.dismantle.error=You need a chest in your inventory to dismantle!
+gui.sapturretmod.tcu.page.sapturretmod:info.dismantle.error=You need a Turret Crate in your inventory to dismantle!
 gui.sapturretmod.tcu.page.sapturretmod:info.name=Custom Turret Name
 gui.sapturretmod.tcu.page.sapturretmod:info.health=Health
 gui.sapturretmod.tcu.page.sapturretmod:info.health.suffix=%s hearts
