--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -124,14 +124,14 @@ entity.sapturretmod:turret_forcefield.name=Forcefield Turret (T2)
 entity.sapturretmod:turret_laser.name=Laser Turret (T3)
 entity.sapturretmod:turret_flamethrower.name=Flamethrower Turret (T3)
 # Death Messages
-death.attack.sapturretmod.turret.sapturretmod:crossbow=%1$s was shot by %2$s
-death.attack.sapturretmod.turret.sapturretmod:shotgun=%1$s has been turned into cheese by %2$s
-death.attack.sapturretmod.turret.sapturretmod:snowball=%1$s was frozen solid by %2$s
-death.attack.sapturretmod.turret.sapturretmod:revolver=%1$s played gunslinger with %2$s and lost
-death.attack.sapturretmod.turret.sapturretmod:minigun=%1$s was pricked to death by %2$s
-death.attack.sapturretmod.turret.sapturretmod:shieldgen=%1$s was smushed to death by %2$s
-death.attack.sapturretmod.turret.sapturretmod:laser=%1$s was cut precisely by %2$s
-death.attack.sapturretmod.turret.sapturretmod:flamethrower=%1$s has been cooked well-done by %2$s
+death.attack.sapturretmod.turret.sapturretmod:turret_crossbow=%1$s was shot by %2$s
+death.attack.sapturretmod.turret.sapturretmod:turret_shotgun=%1$s has been turned into cheese by %2$s
+death.attack.sapturretmod.turret.sapturretmod:turret_snowball=%1$s was frozen solid by %2$s
+death.attack.sapturretmod.turret.sapturretmod:turret_revolver=%1$s played gunslinger with %2$s and lost
+death.attack.sapturretmod.turret.sapturretmod:turret_minigun=%1$s was pricked to death by %2$s
+death.attack.sapturretmod.turret.sapturretmod:turret_shieldgen=%1$s was smushed to death by %2$s
+death.attack.sapturretmod.turret.sapturretmod:turret_laser=%1$s was cut precisely by %2$s
+death.attack.sapturretmod.turret.sapturretmod:turret_flamethrower=%1$s has been cooked well-done by %2$s
 
 #### GUI ####
 # TCU
